--- a/src/app/pages/game/game-sequence/game-sequence.component.html
+++ b/src/app/pages/game/game-sequence/game-sequence.component.html
@@ -5,7 +5,7 @@
         </ion-col>
     </ion-row>
     <ion-row class="ion-justify-content-center">
-        <ion-col class="ion-text-center" size="12">
+        <ion-col class="ion-text-center sequence-number" size="12">
             {{number$ | async | signedNumber}}
         </ion-col>
     </ion-row>
